WebCore/websockets/WebSocketChannelClient.h
@@ -40,6 +40,7 @@ namespace WebCore {
         virtual ~WebSocketChannelClient() { }
         virtual void didConnect() { }
         virtual void didReceiveMessage(const String&) { }
+        virtual void didReceiveMessageError() { }
         virtual void didClose(unsigned long /* unhandledBufferedAmount */) { }
 
     protected:
